--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Welcome to Arjun's Lab</h1>
     </header>
     <main>
-      <img src="your-photo.jpg" alt="Arjun's Photo" class="profile-photo">
+      <img src="IMG20250115185023.jpg" alt="Arjun's Photo" class="profile-photo">
       <p>Hello! I’m Arjun, and this is my lab where innovation meets creativity. Stay tuned for exciting projects and ideas!</p>
     </main>
     <footer>
