--- a/Arjunslab.html
+++ b/Arjunslab.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>About Me - Arjunslab</h1>
-<img src="arjunslab.jpg" alt="Arjunslab" style="width:300px;height:300px;">
+<img src="IMG202501151850.jpg" alt="Arjunslab" style="width:300px;height:300px;">
 <p>Hi there! My name is Arjunslab and I am an 11-year-old YouTuber. I love creating content and sharing my passion with others. I started my YouTube channel to showcase my interests and connect with like-minded individuals.</p>
 <p>On my channel, you will find a variety of videos ranging from gaming to DIY projects. I enjoy exploring new ideas and sharing them with my viewers. I love interacting with my audience and hearing their feedback.</p>
 <p>When I'm not creating videos, I enjoy spending time with my friends and family. I am always looking for new adventures and experiences to share with my subscribers.</p>
