--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arjun's Lab</title>
-  <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About Me - Arjunslab</title>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Welcome to Arjun's Lab</h1>
-    </header>
-    <main>
-      <img src="IMG20250115185023.jpg" alt="Arjun's Photo" class="profile-photo">
-      <p>Hello! I’m Arjun, and this is my lab where innovation meets creativity. Stay tuned for exciting projects and ideas!</p>
-    </main>
-    <footer>
-      <p>© 2025 Arjun's Lab. All rights reserved.</p>
-    </footer>
-  </div>
+<h1>About Me - Arjunslab</h1>
+<img src="IMG202501151850.jpg" alt="Arjunslab" style="width:300px;height:300px;">
+<p>Hi there! My name is Arjunslab and I am an 11-year-old YouTuber. I love creating content and sharing my passion with others. I started my YouTube channel to showcase my interests and connect with like-minded individuals.</p>
+<p>On my channel, you will find a variety of videos ranging from gaming to DIY projects. I enjoy exploring new ideas and sharing them with my viewers. I love interacting with my audience and hearing their feedback.</p>
+<p>When I'm not creating videos, I enjoy spending time with my friends and family. I am always looking for new adventures and experiences to share with my subscribers.</p>
+<p>Thank you for visiting my page and supporting my channel. I hope you enjoy watching my videos as much as I enjoy creating them!</p>
 </body>
 </html>
