--- a/index.html
+++ b/index.html
@@ -1,16 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Me - Arjunslab</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - Arjun Bajpai</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: auto;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        h2 {
+            color: #555;
+        }
+        .profile-image {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-bottom: 20px;
+        }
+        .profile-image img {
+            width: 100%;
+            height: auto;
+        }
+        p {
+            color: #666;
+            text-align: center;
+            max-width: 600px;
+            margin: 10px 0;
+        }
+        .section {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin: 20px 0;
+            max-width: 600px;
+            text-align: left;
+        }
+        .contact {
+            text-align: center;
+        }
+        .yt-button {
+            background-color: #FF0000; /* YouTube red */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            text-decoration: none;
+        }
+        .yt-button:hover {
+            background-color: #CC0000; /* Darker red on hover */
+        }
+        .footer {
+            margin-top: 40px;
+            font-size: 0.9em;
+            color: #999;
+        }
+    </style>
 </head>
 <body>
-<h1>About Me - Arjunslab</h1>
-<img src="IMG20250115185023.jpg" alt="Arjunslab" style="width:300px;height:300px;">
-<p>Hi there! My name is Arjunslab and I am an 11-year-old YouTuber. I love creating content and sharing my passion with others. I started my YouTube channel to showcase my interests and connect with like-minded individuals.</p>
-<p>On my channel, you will find a variety of videos ranging from gaming to DIY projects. I enjoy exploring new ideas and sharing them with my viewers. I love interacting with my audience and hearing their feedback.</p>
-<p>When I'm not creating videos, I enjoy spending time with my friends and family. I am always looking for new adventures and experiences to share with my subscribers.</p>
-<p>Thank you for visiting my page and supporting my channel. I hope you enjoy watching my videos as much as I enjoy creating them!</p>
+
+    <div class="profile-image">
+        <img src="IMG20250115185023.jpg" alt="Arjun Bajpai">
+    </div>
+    <h1>Hi, I'm Arjun Bajpai!</h1>
+    <p>I am a YouTuber, and I am 11 years old. My channel is called Arjunslab. I create fun and exciting content for everyone to enjoy!</p>
+
+    <div class="section">
+        <h2>About My Channel</h2>
+        <p>On my channel, I share videos about gaming, science experiments, and fun DIY projects. My goal is to entertain and educate my viewers by showcasing interesting topics and engaging content.</p>
+    </div>
+
+    <div class="section">
+        <h2>My Interests</h2>
+        <p>I have a variety of interests! Some of my favorite things include:</p>
+        <ul>
+            <li>Playing video games</li>
+            <li>Doing science experiments</li>
+            <li>Making DIY crafts</li>
+            <li>Watching movies and cartoons</li>
+            <li>Exploring nature</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>My Hobbies</h2>
+        <p>In my free time, I enjoy:</p>
+        <ul>
+            <li>Reading adventure books</li>
+            <li>Drawing and painting</li>
+            <li>Playing sports with friends</li>
+            <li>Building models and puzzles</li>
+            <li>Learning new things online</li>
+        </ul>
+    </div>
+
+    <div class="section contact">
+        <h2>Contact Me</h2>
+        <p>If you have any questions or just want to say hi, feel free to reach out!</p>
+        <p>Email: arjun@example.com</p>
+        <p>Follow me on my YouTube channel:</p>
+        <a href="https://www.youtube.com/Arjunslab" target="_blank" class="yt-button">Visit My Channel</a>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2023 Arjun Bajpai. All rights reserved.</p>
+    </div>
+    
 </body>
 </html>
