--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <p>If you have any questions or just want to say hi, feel free to reach out!</p>
         <p>Email: arjun@example.com</p>
         <p>Follow me on my YouTube channel:</p>
-        <a href="https://youtube.com/@arjunslab?si=JXJYQpjfjopAx6vI" target="_blank" class="yt-button">Visit My Channel</a>
+        <a href="https://youtube.com/@arjunslab" target="_blank" class="yt-button">Visit My Channel</a>
     </div>
 
     <div class="footer">
