--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="section contact">
         <h2>Contact Me</h2>
         <p>If you have any questions or just want to say hi, feel free to reach out!</p>
-        <p>Email: arjun@example.com</p>
+        <p>Email: arjunb5454@gmail.com</p>
         <p>Follow me on my YouTube channel:</p>
         <a href="https://youtube.com/@arjunslab" target="_blank" class="yt-button">Visit My Channel</a>
     </div>
