--- a/index.html
+++ b/index.html
@@ -5,70 +5,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Arjun Bajpai</title>
     <style>
+        /* Basic Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
+            background-color: #121212; /* Dark background for futuristic look */
+            color: #EAEAEA; /* Light text color for contrast */
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: auto;
-            background-color: #f4f4f4;
+            justify-content: flex-start;
+            padding: 40px;
+            min-height: 100vh;
             margin: 0;
-            padding: 20px;
+            overflow-x: hidden;
+            scroll-behavior: smooth; /* Smooth scrolling */
         }
+
+        /* Header */
         h1 {
-            color: #333;
+            color: #0DF8A7; /* Neon Green */
+            font-size: 3.5em;
+            margin-bottom: 20px;
+            font-weight: 700;
+            text-align: center;
+            text-shadow: 0 0 10px #0DF8A7, 0 0 20px #0DF8A7;
+            letter-spacing: 1px;
         }
+
         h2 {
-            color: #555;
+            color: #FF6F61; /* Neon Pink */
+            font-size: 2em;
+            margin-bottom: 10px;
+            text-align: left;
+            letter-spacing: 1px;
         }
+
+        /* Profile Image */
         .profile-image {
-            width: 150px;
-            height: 150px;
+            width: 180px;
+            height: 180px;
             border-radius: 50%;
             overflow: hidden;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            position: relative;
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.3);
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         }
+
         .profile-image img {
             width: 100%;
             height: auto;
         }
+
+        .profile-image:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 50px rgba(0, 255, 255, 0.7);
+        }
+
+        /* Paragraphs */
         p {
-            color: #666;
+            color: #EAEAEA;
             text-align: center;
-            max-width: 600px;
-            margin: 10px 0;
-        }
-        .section {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+            max-width: 800px;
             margin: 20px 0;
-            max-width: 600px;
-            text-align: left;
+            line-height: 1.7;
+            font-size: 1.1em;
         }
+
+        /* Sections */
+        .section {
+            background-color: #1F1F1F;
+            border-radius: 12px;
+            box-shadow: 0 6px 30px rgba(0, 255, 255, 0.2);
+            padding: 40px;
+            margin: 30px 0;
+            max-width: 800px;
+            width: 100%;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+
+        .section:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 50px rgba(0, 255, 255, 0.3);
+        }
+
+        /* Lists */
+        ul {
+            list-style-type: none;
+            padding-left: 20px;
+            font-size: 1.2em;
+            color: #AAA;
+        }
+
+        ul li {
+            margin: 10px 0;
+            line-height: 1.8;
+        }
+
+        /* Contact Section */
         .contact {
             text-align: center;
+            background-color: #2A2A2A;
+            padding: 30px;
+            border-radius: 12px;
+            width: 100%;
+            max-width: 800px;
+            box-shadow: 0 6px 30px rgba(0, 255, 255, 0.2);
         }
+
+        .contact p {
+            font-size: 1.3em;
+            margin: 10px 0;
+        }
+
+        /* Button Styling */
         .yt-button {
-            background-color: #FF0000; /* YouTube red */
+            display: inline-block;
+            background-color: #FF6F61; /* Neon Pink */
             color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
+            padding: 15px 30px;
+            font-size: 1.3em;
+            border-radius: 30px;
             text-decoration: none;
+            text-align: center;
+            box-shadow: 0 5px 20px rgba(255, 111, 97, 0.3);
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s ease;
         }
+
         .yt-button:hover {
-            background-color: #CC0000; /* Darker red on hover */
+            background-color: #FF2E00; /* Darker Neon Pink */
+            transform: scale(1.1);
         }
+
+        .yt-button:active {
+            transform: scale(0.95);
+        }
+
+        /* Footer */
         .footer {
             margin-top: 40px;
             font-size: 0.9em;
             color: #999;
+            text-align: center;
         }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2.5em;
+            }
+
+            .profile-image {
+                width: 150px;
+                height: 150px;
+            }
+
+            .section {
+                padding: 25px;
+                margin: 20px 0;
+            }
+
+            .yt-button {
+                font-size: 1.2em;
+                padding: 12px 24px;
+            }
+
+            p {
+                font-size: 1em;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -119,6 +233,6 @@
     <div class="footer">
         <p>&copy; 2025 Arjun Bajpai. All rights reserved.</p>
     </div>
-    
+
 </body>
 </html>
